# ncount

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac  ncount.c
lib/: Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
man/: ncount.1
src/: ncount.c
